# yquant-py

./: .env  .gitignore  LICENSE  README.md  README.rst  VERSION  __main__.py  demo.py  fetcher.py  pypi.bat  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml  pypi.yml  test.yml
backtest/: __init__.py  __main__.py  analyzer.py  broker.py  data.py  evaluator.py  fetcher.py  launcher.py  ledger.py  logging.json  main.py  router.py  symbol.py  version.py
backtest/exchanges/: __init__.py  korea_exchange.py  kosdaq.py  kospi.py
backtest/market/: korea.py  rules_kospi.json  symbols.py  symbols_kospi.json
backtest/strategies/: __init__.py  dummy.py
backtest/symbols/: korea_symbols.py  krx.py
backtest/utils/: symbols_krx.py
backtester/: __init__.py  analyzer.py  broker.py  data.py  fetcher.py  logger.py
backtester/market/: kosdaq.py  kospi.py
config/: market.json  symbol.json  symbol.py  symbols.json
demo/: backtest.bat  backtest.sh  config.json  demo.py  ib21.py  main.py  momentum.py  run.bat  run.sh  sample.py  strategy.py  symbols.json
demo/market/: korea.py  (+3 more)
docs/: api.rst  backtest.rst  conf.py  index.rst  preview.py  vision.md
input/: ticks.txt
src/: logging.json
tests/: conftest.py  test_analyzer.py  test_asset.py  test_broker.py  test_dataset.py  test_evaluator.py  test_fetcher.py  test_filled.py  test_ledger.py  test_main.py  test_market_korea.py  test_market_kosdaq.py  test_market_kospi.py  test_order.py  test_position.py  test_positions.py  test_router.py  test_stock.py  test_timeseries.py
ticks/: 5 lines.txt
(+18 files in other folders)
