[metadata]
name = yquant
version = file: VERSION
author = Yoonbae Cho
author_email = yquant@xcv.kr
url = https://github.com/yoonbae81/yquant
license_file = LICENSE
description = Algorithmic Trading System
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >= 3.10
package_dir =
    =src
packages = find:
install_requires =
    pyzmq
    setuptools >=46.4.0

[options.packages.find]
where = src